[gd_scene load_steps=3 format=3 uid="uid://y8w0y6jolfcn"]

[ext_resource type="Script" path="res://Scenes/Janelas/Credentials Setter/Credentials Setter.gd" id="1_eskmt"]
[ext_resource type="PackedScene" uid="uid://cdgfhjpgqxivk" path="res://Scenes/Components/Animated button/v2/Animated Button.tscn" id="2_p786f"]

[node name="Credentials Setter" type="MarginContainer"]
script = ExtResource("1_eskmt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Quem é você?"

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Name Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TextboxLabel"
text = "Nome"

[node name="Name Input" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="E-mail Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"TextboxLabel"
text = "E-mail"

[node name="E-mail Input" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Spacer2" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_type_variation = &"TextboxLabel"
text = "*Este passo só é necessário uma vez por repositório"
autowrap_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Configurar"

[node name="Configure button" parent="VBoxContainer" instance=ExtResource("2_p786f")]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &""
text = "Configurar"
button_text = "Configurar"
button_disabled = true

[connection signal="text_changed" from="VBoxContainer/Name Input" to="." method="_update_name"]
[connection signal="text_changed" from="VBoxContainer/E-mail Input" to="." method="_update_email"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_submit_credentials"]
[connection signal="inner_button_pressed" from="VBoxContainer/Configure button" to="." method="_submit_credentials"]
